css/styles.css
/* ... */
.basic-2 .list-unstyled .title {
	margin-bottom: 0.25rem;
	color: #333333;
	font-weight: 700;
	font-size: 1.125rem;
	line-height: 1.75rem;
}

* {
    margin: 0;
    padding: 0;
    outline: none;
  }
  
  body {
    font-family: 'Roboto', sans-serif;
   
  }
  

  
  .merch {
    border-radius: 25px;
    box-shadow: -11px 11px 1px rgba(0, 0, 0, 0.3);
    margin-top: 20px;
    margin-bottom: 20px;
  }
  
  .card-head {
    position: relative;
    height: 220px;
    background: #0191FB;
    /* Old browsers */
    background: -moz-linear-gradient(-45deg, #0191FB 8%, #08F5DA 83%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(-45deg, #0191FB 8%, #08F5DA 83%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(135deg, #0191FB 8%, #08F5DA 83%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#0191FB', endColorstr='#08F5DA', GradientType=1);
    /* IE6-9 fallback on horizontal gradient */
    border-radius: 25px 25px 0 0;
  }
  
  .card-logo {
    width: 55px;
    margin: 20px;
  }
  
  .product-img {
    position: relative;
    left: 0;
    height: 90%;
    width: 90%;
    margin-top: 14px;
    margin-left: 5px;
    border-radius: 25px 25px 0px 0px;
  }
  
  .product-detail {
    padding: 0 20px;
    font-size: 11px;
    color: #fff;
  }
  
  .product-detail h2 {
    font-size: 18px;
    font-weight: 500;
    letter-spacing: 2px;
    padding-bottom: 10px;
    text-transform: uppercase;
  }
  
  .back-text {
    display: inline-block;
    font-size: 125px;
    font-weight: 900;
    margin-left: -7px;
    margin-top: -12px;
    opacity: 0.1;
  }
  
  .card-body {
    height: 255px;
    background: #fff;
    border-radius: 0 0 25px 25px;
  }
  
  .product-title {
    padding: 20px 20px 5px 20px;
    display: block;
    font-size: 17px;
    font-weight: 500;
    letter-spacing: 1px;
    text-transform: uppercase;
  }
  
  .product-title b {
    font-weight: 900;
    letter-spacing: 0px;
  }
  
  .badge {
    position: relative;
    font-size: 10px;
    font-weight: 300;
    color: #fff;
    background: #0191FB;
    padding: 2px 5px;
    border-radius: 4px;
    top: -2px;
    margin-left: 5px;
  }
  
  .product-caption {
    display: block;
    padding: 0 20px;
    font-size: 12px;
    font-weight: 400;
    text-transform: uppercase;
  }
  
  .product-rating {
    padding: 0 20px;
    font-size: 11px;
  }
  
  .product-rating i.grey {
    color: #acacab;
  }
  
  .product-size h4 {
    font-size: 11px;
    padding: 0 21px;
    margin-top: 15px;
    padding-bottom: 10px;
    text-transform: uppercase;
  }
  
  .ul-size {
    margin-left: 15px;
  }
  
  .ul-size li {
    list-style: none;
    float: left;
    margin-right: 20px;
  }
  
  .ul-size li a {
    display: inline-block;
    text-decoration: none;
    font-size: 11px;
    width: 22px;
    height: 22px;
    border-radius: 100%;
    text-align: center;
    line-height: 23px;
    color: #000;
  }
  
  .ul-size li a.active {
    background: #f35e3d;
    color: #fff;
  }
  
  .product-size:before,
  .product-size:after {
    content: '';
    display: block;
    clear: both;
  }
  
  .product-color h4 {
    font-size: 11px;
    padding: 0 21px;
    margin-top: 20px;
    padding-bottom: 20px;
    text-transform: uppercase;
  }
  
  .ul-color {
    margin-left: 27px;
  }
  
  .ul-color li {
    list-style: none;
    float: left;
    margin-right: 20px;
  }
  
  .ul-color li a {
    display: inline-block;
    width: 16px;
    height: 16px;
    border-radius: 100%;
  }
  
  .ul-color li a.orange {
    background: #f35e3d;
  }
  
  .ul-color li a.green {
    background: #11e95b;
  }
  
  .ul-color li a.yellow {
    background: #ffd414;
  }
  
  .ul-color li a.active:after {
    position: absolute;
    content: '';
    display: inline-block;
    border: 1px solid #f35e3d;
    width: 24px;
    height: 24px;
    border-radius: 100%;
    margin-left: -5px;
    margin-top: -5px;
  }
  
  .product-price {
    position: absolute;
    background: #0191FB;
    padding: 7px 20px;
    text-align: center;
    display: inline-block;
    font-size: 24px;
    font-weight: 200;
    color: #fff;
    border-radius: 7px;
    margin-top: -13px;
    margin-left: -130px;
    box-shadow: -10px 20px 15px -10px rgba(17, 71, 233, 0.3);
  }
  
  .product-price b {
    margin-left: 9px;
  }
  .paystack-buynow {
    position: absolute;
   
    padding: 7px 20px;
    text-align: center;
    display: inline-block;
    font-size: 24px;
    font-weight: 200;
    border-radius: 7px;
    margin-top: 35px;
    margin-left: -100px;
    
  }
  
  
  
  .yt
  {
    position: fixed;
    padding:7px 10px 3px 10px;
    top: 5px;
    right: 5px;
    background: rgba(0,0,0,0.1);
  }
  
  .yt:hover
  {
    background: rgba(0,0,0,0.2);
  }

/********************/
/*     Merch     */
/********************/
.max-100 {
	max-width: 100%;
}

/********************/
/*     Sponsors     */
/********************/
.basic-3 {
	padding-top: 7.5rem;
	padding-bottom: 7.25rem;
	text-align: center;
}

.basic-3 .h2-heading {
	margin-bottom: 2.25rem;
}

.basic-3 .image-container {
	margin-bottom: 4.5rem;
}

.basic-3 img {
	display: block;
	max-width: 100%;
	height: auto;
	max-height: 36px;
	margin-right: auto;
	margin-bottom: 2.5rem;
	margin-left: auto;
}

.basic-3 h3 {
	margin-bottom: 1rem;
}

.meet-sponsors img {
	max-height: 8rem;
	margin: 0.3rem;
}
h2{
    text-align:center;
    padding: 20px;
  }
  /* Slider */
  
  .slick-slide {
      margin: 0px 20px;
  }
  
  .slick-slide img {
      width: 100%;
  }
/* ... */

